@@ -1,4 +1,4 @@
 --- !ditz.rubyforge.org,2008-03-06/config 
-name: Dakshina Murthy
-email: dkmurthy9@gmail.com
+name: Ramana
+email: sramana9@gmail.com
 issue_dir: bugs
