@@ -1,3 +1,4 @@
+Revision 91 	 2010-11-13 	 Adding IE6NoMore 
 Revision 90 	 2010-11-06 	 Doc related changes 
 Revision 89 	 2010-11-02 	 Correction to install instructions 
 Revision 88 	 2010-11-02 	 Small fix for git push in docs 
